# dci-module-stiac

./: CMakeLists.txt
idl/: stiac.idl
idl/stiac/: localEdge.idl  protocol.idl  remoteEdge.idl
src/: entry.cpp  localEdge.cpp  localEdge.hpp  pch.hpp  protocol.cpp  protocol.hpp  remoteEdge.cpp  remoteEdge.hpp
src/crypto/: handshake.cpp  handshake.hpp  secret.hpp  symmetric.cpp  symmetric.hpp
src/localEdge/: duty.cpp  duty.hpp  input.cpp  input.hpp  linkIdOperations.hpp  localLinks.cpp  localLinks.hpp  output.cpp  output.hpp  remoteLinks.cpp  remoteLinks.hpp
src/stages/: base.cpp  base.hpp
src/stages/in/: ciphering.cpp  ciphering.hpp  compression.cpp  compression.hpp  cutting.cpp  cutting.hpp
test/: ciphering.cpp  compression.cpp  integrity.cpp  victimInterface.idl
test/localEdge/: call.cpp  connect.cpp  future.cpp
test/utils/: bundle.hpp
